--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+$outline-color: outline-gray;
 
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
@@ -43,10 +44,5 @@
     &:is(:hover) path {
       @apply fill-white;
     }
-  }
-  .custom-search-input,
-  .custom-search-input:focus,
-  .custom-search-input:focus-visible {
-    @apply shadow-none ring-0 border-0;
   }
 }
